# Persian-NLP

./: README.md  pyproject.toml
persian_nlp/: README.md  __init__.py  normalizer.py  stemmer.py  tokenize.py
tests/: test_normalizer.py  test_stemmer.py  test_tokenize.py
